--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "@supabase/supabase-js": "^2.39.7",
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.51.0",
+    "react-redux": "^9.1.0",
     "react-router": "^7.5.0",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
